added story card and categoreis section

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,5 +22,12 @@
         "src/pages/*"
       ],
     }
-  }
+  },
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
