--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,6 +17,9 @@
       "@contexts/*": [
         "src/contexts/*"
       ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
       "@pages/*": [
         "src/pages/*"
       ],
