--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --mode development",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "prettier --write ./src/**/*.{js,ts,jsx,tsx,json,css}"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
